<resources>
    <string name="app_name">Asthma Aid</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_well">When Feeling Well</string>
    <string name="title_activity_unwell">When Feeling Unwell</string>
    <string name="title_activity_emergency">In an Emergency</string>
    <string name="title_activity_my_data">My Data</string>
    <string name="title_activity_graph_and_calendar">Graph and Calendar</string>
    <string name="title_activity_med_ref">Helpful Information</string>
    <string name="title_activity_app_settings">App Settings</string>
    <string name="title_activity_symptoms_list">Symptoms A-Z</string>
    <string name="title_activity_calendar">Calendar</string>
    <string name="title_activity_nav_drawer">Asthma Aid</string>
    <string name="title_activity_setup">Setup 1/6 - Personal Info</string>
    <string name="title_activity_setup2">Setup 2/6 - Peak Flow</string>
    <string name="title_activity_setup3">Setup 3/6 - GP Details</string>
    <string name="title_activity_setup4">Setup 4/6 - Inhalers &amp; Medication</string>
    <string name="title_activity_setup5">Setup 5/6 - Asthma Triggers</string>
    <string name="title_activity_setup6">Setup 6/6 - Notes</string>
    <string name="title_activity_setup_done">Basic Info</string>
    <string name="title_activity_setup2_done">Peak Flow</string>
    <string name="title_activity_setup3_done">GP Details</string>
    <string name="title_activity_setup4_done">Inhalers &amp; Medication</string>
    <string name="title_activity_setup5_done">Asthma Triggers</string>
    <string name="title_activity_setup6_done">Notes</string>
    <string name="navmain_track_title">Log your peak flow for today:</string>
    <string name="navmain_track_button">Enter</string>
    <string name="navmain_well_title">EVERYDAY CARE</string>
    <string name="navmain_well_desc">Your daily medication, and information to relieve mild symptoms.</string>
    <string name="navmain_unwell_title">FEELING WORSE</string>
    <string name="navmain_unwell_desc">Steps you can take if your symptoms are persistent and you need to control them.</string>
    <string name="navmain_emergency_title">ASTHMA ATTACK</string>
    <string name="navmain_emergency_desc">Urgent information for severe symptoms or if you are having an asthma attack.</string>
    <string name="navmenu_title">Main Menu</string>
    <string name="navmenu_profile">My Data</string>
    <string name="navmenu_cal">Calendar</string>
    <string name="navmenu_graph">Graph</string>
    <string name="navmenu_symptoms">Symptoms A-Z</string>
    <string name="navmenu_other_info">Helpful Information</string>
    <string name="daily_peak_flow">My Peak Flow Today Is...</string>
    <string name="submit">Submit</string>
    <string name="no_value">You must enter a value for peak flow</string>
    <string name="button_well">Well</string>
    <string name="button_unwell">Unwell</string>
    <string name="button_emergency">Emergency</string>
    <string name="button_graph">Calendar and Graph</string>
    <string name="button_my_data">My Data</string>
    <string name="button_app_settings">App Settings</string>
    <string name="button_med_ref">Medical Reference</string>
    <string name="EditButton">Edit</string>
    <string name="editButton">Today\'s peak flow has been changed to: </string>
    <string name="submitButton">Peak flow submitted: </string>
    <string name="button_symptoms">Symptoms</string>
    <string name="relief_symptoms">Relief Symptoms</string>
    <string name="peak_flow_personal_best">Your PB Peak Flow (PEF)</string>
    <string name="wheezing_popup">If you are wheezing, take a puff of your reliever inhaler.</string>
    <string name="chest_tightness_popup">If your chest feels tight, take a puff of your reliever inhaler.</string>
    <string name="breathless_popup">If you feel breathless, take a puff of your reliever inhaler.</string>
    <string name="coughing_popup">If you a constantly coughing,  take a puff of your reliever inhaler.</string>
    <string name="cant_walk_popup">If you are struggling to walk,  take a puff of your reliever inhaler.</string>
    <string name="textView1">This is what i can do to get on top of my asthma...</string>
    <string name="textView2">Start using preventer inhaler regularly</string>
    <string name="textView3">Take reliever puffs as needed (up to 3 puffs every 4 hours)</string>
    <string name="textView4">If no improvement within 48 hours i should make an urgent appointment to see my GP or asthma nurse.</string>
    <string name="symptoms_popup">PlaceHolder</string>
    <string name="cant_sleep_popup">If you are struggling to sleep, take up to 3 reliever puffs every 4 hours.</string>
    <string name="cant_talk_popup">If you are struggling to talk, take up to 3 reliever puffs every 4 hours.</string>
    <string name="peakflow_drop_popup">If your peak flow has dropped significantly, take up to 3 reliever puffs every 4 hours.</string>
    <string name="emergency_notice">THIS IS AN EMERGENCY TAKE ACTION NOW</string>
    <string name="emergency_calm_instruction">Sit up straight. Try to keep calm.</string>
    <string name="emergency_procedure">Puff Reliever inhaler every time the bar fills</string>
    <string name="emergency_button_timer">Start Timer</string>
    <string name="emergency_button_not_better">I dont feel better</string>
    <string name="emergency_countdown">Get Ready..</string>
    <string name="emergency_countdown2">Puff!</string>
    <string name="setup_next">Next</string>
    <string name="setup_update">Update</string>
    <string name="setup_previous">Previous</string>
    <string name="setup1_desc_welcome">The information on this page is required to use the app, and allows estimations of your lung output to be made.</string>
    <string name="setup1_desc">The information you enter on this page allows the app to help you effectively.</string>
    <string name="setup1_name">Name:</string>
    <string name="setup1_age">Date of Birth:</string>
    <string name="setup1_gender">Sex:</string>
    <string name="setup1_height">Height:</string>
    <string name="setup_disclaimer">Welcome to Asthma Aid! Though care has been taken to provide information as accurately as possible, this app should not be used to replace professional medical advice. \n\nInformation you provide to the app is not shared with any third party, and can be edited or deleted at any time from My Data on the main menu.</string>
    <string name="setup1_female">Female</string>
    <string name="setup1_male">Male</string>
    <string name="setup1_prefer">Prefer not to say</string>
    <string-array name="stringArrayGender">
        <item>Male</item>
        <item>Female</item>
        <item>Prefer not to say</item>
    </string-array>
    <string-array name="stringArrayAge">
        <item>0-10</item>
        <item>11-20</item>
        <item>21-30</item>
        <item>31-40</item>
        <item>41-50</item>
        <item>51-60</item>
        <item>61-70</item>
        <item>70+</item>
    </string-array>
    <string name="setup2_desc">Your peak flow measurement can indicate how your asthma is responding to treatment. Please enter your personal best below.</string>
    <string name="setup2_max_peak_flow">Personal Best Peak Flow:</string>
    <string name="setup2_warning_peak_flow">Warning Peak Flow:</string>
    <string name="setup2_critical_peak_flow">Critical Peak Flow:</string>
    <string name="setup2_warning_desc">If you have been provided with peak flow values that warn you when you need more treatment, or are having an asthma attack please enter these below.</string>
    <string name="setup2_annual">Please enter the date of your annual checkup</string>
    <string name="setup3_desc">Having the details of your GP, asthma nurse and who to contact out of hours saved to your phone can help you in an emergency.</string>
    <string name="setup3_gp_title">GP/Asthma Nurse</string>
    <string name="setup3_ooh_title">Out of Hours Contact</string>
    <string name="setup3_gp_ooh_name">Name:</string>
    <string name="setup3_gp_ooh_number">Phone Number:</string>
    <string name="setup4_desc">Please enter the details of your inhalers and other medication, and the usage you have been recommended. </string>
    <string name="setup4_preventer">Preventer Inhaler:</string>
    <string name="setup4_reliever">Reliever Inhaler:</string>
    <string name="setup4_preventer_puffs_am">puffs in the morning</string>
    <string name="setup4_preventer_puffs_pm">puffs in the evening</string>
    <string name="setup4_reliever_puffs">puffs when I\'m unwell</string>
    <string-array name="stringArrayPreventers">
        <item>None</item>
        <item>Beclomethasone</item>
        <item>Clenil Modulate</item>
        <item>Qvar</item>
        <item>Fluticasone (Flixotide)</item>
        <item>Symbicort</item>
        <item>Seretide</item>
        <item>Fostair</item>
        <item>Flutiform</item>
    </string-array>
    <string-array name="stringArrayRelievers">
        <item>None</item>
        <item>Salbutamol (Ventolin)</item>
        <item>Salbutamol (Generic)</item>
        <item>Turbutaline (Bricanyl)</item>
    </string-array>
    <string name="setup5_desc">Tap below to mark an item as a mild (green) trigger. Keep tapping to mark the trigger as medium (amber), severe (red), or unselected.</string>
    <string name="trigger_animals">Animals</string>
    <string name="trigger_dust">Dust or Dust Mites</string>
    <string name="trigger_emotion">Emotional Responses</string>
    <string name="trigger_exercise">Exercise</string>
    <string name="trigger_foods">Foods</string>
    <string name="trigger_pollen">Pollen</string>
    <string name="trigger_smoke">Smoke</string>
    <string name="trigger_stress">Stress</string>
    <string name="trigger_odour">Strong Odours</string>
    <string name="trigger_virus">Viral Infections</string>
    <string name="trigger_weather">Weather or Temperature Change</string>
    <string name="trigger_custom">+ add trigger</string>
    <string name="trigger_unselected">Unselected</string>
    <string name="trigger_mild">Mild</string>
    <string name="trigger_medium">Medium</string>
    <string name="trigger_severe">Severe</string>
    <string name="setup6_desc">You can enter any other information about your asthma here. </string>
    <string name="my_data_s1_title">Personal Information</string>
    <string name="my_data_s1_desc">Your account name, date of birth, sex and height.</string>
    <string name="my_data_s2_title">Peak Flow</string>
    <string name="my_data_s2_desc">Personal best, warning and critical peak flow levels.</string>
    <string name="my_data_s3_title">Contact Details</string>
    <string name="my_data_s3_desc">GP and out of hours contact details, appointment date.</string>
    <string name="my_data_s4_title">Inhalers &amp; Medication</string>
    <string name="my_data_s4_desc">Preventer and reliever names, doses and rescue pack.</string>
    <string name="my_data_s5_title">Triggers</string>
    <string name="my_data_s5_desc">Known triggers that make your asthma worse.</string>
    <string name="my_data_s6_title">Notes</string>
    <string name="my_data_s6_desc">Free area to add any additional details about your asthma.</string>
    <string name="my_data_edit">Edit</string>
    <string name="my_data_delete">DELETE ALL DATA</string>
    <string name="my_data_title">Personal Info:</string>
    <string name="my_data_name">Name</string>
    <string name="my_data_age">Age</string>
    <string name="my_data_gender">Gender</string>
    <string name="my_data_height">Height</string>
    <string name="my_data_peak_title">Peak Flow Levels:</string>
    <string name="my_data_peak">Personal Best</string>
    <string name="my_data_warning">Warning</string>
    <string name="my_data_critical">Critical</string>
</resources>