<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_menu_profile"
            android:title="@string/navmenu_profile" />
        <item
            android:id="@+id/nav_symptoms"
            android:icon="@drawable/ic_menu_list"
            android:title="@string/navmenu_symptoms" />
        <item
            android:id="@+id/nav_calendar"
            android:icon="@drawable/ic_menu_calendar"
            android:title="@string/navmenu_cal" />
        <item
            android:id="@+id/nav_graph"
            android:icon="@drawable/ic_menu_graph"
            android:title="@string/navmenu_graph" />
        <item
            android:id="@+id/nav_helpful_info"
            android:icon="@drawable/ic_menu_info"
            android:title="@string/navmenu_other_info" />
    </group>

    <!--Block example-->
    <!--<item android:title="Communicate">-->
        <!--<menu>-->
            <!--<item-->
                <!--android:id="@+id/nav_share"-->
                <!--android:icon="@drawable/ic_menu_share"-->
                <!--android:title="Share" />-->
            <!--<item-->
                <!--android:id="@+id/nav_send"-->
                <!--android:icon="@drawable/ic_menu_send"-->
                <!--android:title="Send" />-->
        <!--</menu>-->
    <!--</item>-->

</menu>
