<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_alignParentTop="true"
        android:gravity="center_vertical"
        android:textAppearance="?android:attr/textAppearanceLarge"
        />

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bottom_container"
        android:layout_below="@id/title"
        android:fillViewport="false"
        android:orientation="vertical"
        android:layout_marginTop="50dp"
        android:padding="10dp"
        android:id="@+id/scrollView3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/setup3_desc"
                android:id="@+id/textView" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/setup3_gp_title"
                android:layout_marginTop="20dp"
                android:id="@+id/textViewPBPeakFlow" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/setup3_gp_ooh_name"
                android:id="@+id/textViewGPName" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editTextGPName"
                android:inputType="text"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/setup3_gp_ooh_number"
                android:id="@+id/textView7" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:ems="10"
                android:id="@+id/editTextGPPhone" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/setup3_ooh_title"
                android:id="@+id/textViewOoHTitle"
                android:layout_marginTop="10dp"
                android:layout_alignTop="@+id/scrollView3"
                android:layout_alignLeft="@+id/buttonPrevious"
                android:layout_alignStart="@+id/buttonPrevious" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/setup3_gp_ooh_name"
                android:id="@+id/textView6" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editTextOoHName"
                android:inputType="text"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/setup3_gp_ooh_number"
                android:id="@+id/textView8" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:ems="10"
                android:id="@+id/editTextOoHNumber" />


        </LinearLayout>
    </ScrollView>


    <LinearLayout
        android:id="@+id/bottom_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

    </LinearLayout>

    <Button
        android:id="@+id/buttonSubmit"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/submit"

        android:onClick="submitData"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="72dp" />

    <Button
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/setup_previous"
        android:id="@+id/buttonPrevious"
        android:layout_alignTop="@+id/buttonSubmit"
        android:layout_toLeftOf="@+id/buttonSubmit"
        android:layout_toStartOf="@+id/buttonSubmit"
        android:onClick="previousPage"
        />

    <Button
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/setup_next"
        android:id="@+id/buttonNext"
        android:layout_alignTop="@+id/buttonSubmit"
        android:layout_toRightOf="@+id/buttonSubmit"
        android:onClick="nextPage"
        />


</RelativeLayout>