<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_alignParentTop="true"
        android:gravity="center_vertical"
        android:textAppearance="?android:attr/textAppearanceLarge"
        />

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bottom_container"
        android:layout_below="@id/title"
        android:fillViewport="false"
        android:orientation="vertical"
        android:layout_marginTop="50dp"
        android:padding="10dp"
        android:id="@+id/scrollView4">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/setup5_desc"
                android:id="@+id/textView" />

        </LinearLayout>


    </ScrollView>

    <Button
        android:id="@+id/buttonSubmit"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/submit"

        android:onClick="submitData"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="72dp" />

    <Button
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/setup_previous"
        android:id="@+id/buttonPrevious"
        android:layout_alignTop="@+id/buttonSubmit"
        android:layout_toLeftOf="@+id/buttonSubmit"
        android:layout_toStartOf="@+id/buttonSubmit"
        android:onClick="previousPage"
        />

    <Button
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/setup_next"
        android:id="@+id/buttonNext"
        android:layout_alignTop="@+id/buttonSubmit"
        android:layout_toRightOf="@+id/buttonSubmit"
        android:onClick="nextPage"
        />

    <ToggleButton
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:text="New ToggleButton"
        android:id="@+id/toggleButton"
        android:layout_below="@+id/scrollView4"
        android:layout_alignLeft="@+id/buttonPrevious"
        android:layout_alignStart="@+id/buttonPrevious"
        android:layout_marginTop="20dp" />

    <ToggleButton
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:text="New ToggleButton"
        android:id="@+id/toggleButton3"
        android:layout_alignTop="@+id/toggleButton"
        android:layout_centerHorizontal="true" />

    <ToggleButton
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:text="New ToggleButton"
        android:id="@+id/toggleButton4"
        android:layout_alignTop="@+id/toggleButton3"
        android:layout_alignRight="@+id/buttonNext"
        android:layout_alignEnd="@+id/buttonNext" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/trigger_animals"
        android:id="@+id/textView9"
        android:layout_alignRight="@+id/toggleButton"
        android:layout_alignEnd="@+id/toggleButton"
        android:layout_below="@+id/toggleButton"
        android:layout_alignLeft="@+id/toggleButton"
        android:layout_alignStart="@+id/toggleButton"
        android:textAlignment="center"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/trigger_dust"
        android:id="@+id/textView10"
        android:layout_below="@+id/toggleButton3"
        android:layout_alignLeft="@+id/toggleButton3"
        android:layout_alignStart="@+id/toggleButton3"
        android:layout_alignRight="@+id/toggleButton3"
        android:layout_alignEnd="@+id/toggleButton3"
        android:textAlignment="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/trigger_pollen"
        android:id="@+id/textView11"
        android:layout_below="@+id/toggleButton4"
        android:layout_alignLeft="@+id/toggleButton4"
        android:layout_alignStart="@+id/toggleButton4"
        android:layout_alignRight="@+id/buttonNext"
        android:layout_alignEnd="@+id/buttonNext"

        android:textAlignment="center"/>


</RelativeLayout>